Update 4. Наша команда.md

--- a/4. Наша команда.md
+++ b/4. Наша команда.md
@@ -1,10 +1,7 @@
+#4. Наша команда.md
 Наша команда это лучшие из лучших, а именно Божков Олег, Евдокимов Артем, Андрей Филиппов и Еременко Иван. 
-
-Божков Олег - ответственный за сайт.
-
-Евдокимов Артем - ответственнен за ИИ.
-
-Еременко Иван - ответственнен за ИИ.
-
-Андрей Филиппов - ответственный за сайт.
+1.Божков Олег - ответственный за сайт.
+1.Евдокимов Артем - ответственнен за ИИ.
+1.Еременко Иван - ответственнен за ИИ.
+1.Андрей Филиппов - ответственный за сайт.
 
