--- a/5. Бизнес-план.md
+++ b/5. Бизнес-план.md
@@ -1,5 +1,5 @@
 # 5. Бизнес-план
-1. Потребители: Большие и малые компании, с большим количеством офисных сотрудников
-2. Потоки доходов: Основной доход нам будут приносить компании заинтересованные в нашей системе, они будут заказывать наши услуги.
-3. Расширение: В дальнейшем мы планируем расширить нашу клиентскую базу, путём добавления новых языков и выхода на международный уровень.
-4. Структура расходов: Стартовый капитал будет составлять 250 тыс.руб., на эти деньги будет проведена закупка оборудования и маркетинговая компания 
+**1. Потребители:** большие и малые компании, с большим количеством офисных сотрудников
+**2. Потоки доходов:** основной доход нам будут приносить компании заинтересованные в нашей системе, они будут заказывать наши услуги.
+**3. Расширение:** в дальнейшем мы планируем расширить нашу клиентскую базу, путём добавления новых языков и выхода на международный уровень.
+**4. Структура расходов:** стартовый капитал будет составлять 250 тыс.руб., на эти деньги будет проведена закупка оборудования и маркетинговая компания 
