Update and rename 6. Аудитория проекта и ее потребности to 6. Аудитория проекта и ее потребности.md

--- a/6. Аудитория проекта и ее потребности.md
+++ b/6. Аудитория проекта и ее потребности.md
@@ -1,3 +1,4 @@
+# 6. Аудитория проекта и ее потребности
 На старте проекта основной целевой аудиторией будут являться российские офисные компании, в дальнейшем к числу компаний  
 примкнут и зарубежные, а после планируется расширить возможности нашего проекта, тем самым приспособив его к фирмам занимающимися 
 обработкой и производством  
