Update 6. Аудитория проекта и ее потребности.md

--- a/6. Аудитория проекта и ее потребности.md
+++ b/6. Аудитория проекта и ее потребности.md
@@ -1,3 +1,7 @@
 # 6. Аудитория проекта и ее потребности
-0. На старте проекта основной целевой аудиторией будут являться российские офисные компании, в дальнейшем к числу компаний примкнут и зарубежные. 
-0. Планируется расширить возможности нашего проекта, тем самым приспособив его к фирмам занимающимися обработкой и производством  
+## Аудитория проекта
+* На старте проекта основной целевой аудиторией будут являться российские офисные компании, в дальнейшем к числу компаний примкнут и зарубежные. 
+* Планируется расширить возможности нашего проекта, тем самым приспособив его к фирмам занимающимися обработкой и производством.  
+## Потребности проекта
+* Раз в пол года проверка техобслуживанием.
+* Техническое оборудование 
