Update 7. Раскрутка проекта.md

--- a/7. Раскрутка проекта.md
+++ b/7. Раскрутка проекта.md
@@ -1,2 +1,3 @@
 # 7. Раскрутка проекта
-Раскрутка будет проводиться путём Бизнес-акселератора
+Раскрутка будет проводиться путём Бизнес-акселератора.
+Раскрутка при помощи контекстной рекламы.
