Update 7. Раскрутка проекта.md

--- a/7. Раскрутка проекта.md
+++ b/7. Раскрутка проекта.md
@@ -1,3 +1,4 @@
 # 7. Раскрутка проекта
 Раскрутка будет проводиться путём Бизнес-акселератора.
 Раскрутка при помощи контекстной рекламы.
+Раскрутка при помощи таргетированной рекламы в социальных сетях.
