Update 7. Раскрутка проекта.md

--- a/7. Раскрутка проекта.md
+++ b/7. Раскрутка проекта.md
@@ -1,4 +1,7 @@
 # 7. Раскрутка проекта
 Раскрутка будет проводиться путём Бизнес-акселератора.
+
+Так же дополнительные способы раскрутки проекта:
 Раскрутка при помощи контекстной рекламы.
 Раскрутка при помощи таргетированной рекламы в социальных сетях.
+Раскрутка при помощи видеорекламы и мобильной рекламы.
