--- a/2. Новизна и практическая значимость.md
+++ b/2. Новизна и практическая значимость.md
@@ -1,6 +1,5 @@
-2. Актуальность
-  Сегодня очень важно, чтобы каждый работник выполнял свою задачу быстро и эффективно, и вслучае возникновения проблем, 
-ему должна быть предоставлена помощь, менеджеры не могут успевать помогать выявлять решать проблемы слабой эффективности 
+2. Актуальность.
+  Сегодня очень важно, чтобы каждый работник выполнял свою задачу максимально быстро и эффективно, и вслучае возникновения каких-либо проблем, ему должна быть предоставлена помощь, менеджеры не могут успевать помогать выявлять решать проблемы слабой эффективности 
 у нескольких сотрудников сразу, в результате чего эффективнось всего рабочего процесса падает. 
 Наша команда предлагает решение этих проблем с минимальными потерями во времени, 
 наша система owl eye способна анализровать эффективность труда каждого сотрудника фирмы и в случае возникновения проблем, 
