--- a/2. Новизна и практическая значимость.md
+++ b/2. Новизна и практическая значимость.md
@@ -4,4 +4,4 @@
 Наша команда предлагает решение этих проблем с минимальными потерями во времени, 
 наша система owl eye способна анализровать эффективность труда каждого сотрудника фирмы и в случае возникновения проблем, 
 система предложит возможные варианты решения. Так же наша система делает работу менеджра куда проще, 
-теперь ему нужно лишь применять те решения, которые предлагает ему система.
+теперь ему нужно лишь выбрать одно из решений, которые предоставит ему наша система.
