--- a/7. Раскрутка проекта.md
+++ b/7. Раскрутка проекта.md
@@ -5,3 +5,4 @@
 Раскрутка при помощи контекстной рекламы.
 Раскрутка при помощи таргетированной рекламы в социальных сетях.
 Раскрутка при помощи видеорекламы и мобильной рекламы.
+Раскрутка при помощи отраслевых и прайс-агрегаторов.
