Update 7. Раскрутка проекта.md

--- a/7. Раскрутка проекта.md
+++ b/7. Раскрутка проекта.md
@@ -6,3 +6,4 @@
 Раскрутка при помощи таргетированной рекламы в социальных сетях.
 Раскрутка при помощи видеорекламы и мобильной рекламы.
 Раскрутка при помощи отраслевых и прайс-агрегаторов.
+Раскрутка при помощи партнерских программ.
