Update 7. Раскрутка проекта.md

--- a/7. Раскрутка проекта.md
+++ b/7. Раскрутка проекта.md
@@ -7,3 +7,4 @@
 Раскрутка при помощи видеорекламы и мобильной рекламы.
 Раскрутка при помощи отраслевых и прайс-агрегаторов.
 Раскрутка при помощи партнерских программ.
+Раскрутка при помощи контент-маркетинга.
