--- a/2. Новизна и практическая значимость.md
+++ b/2. Новизна и практическая значимость.md
@@ -3,5 +3,5 @@
 у нескольких сотрудников сразу, в результате чего эффективнось всего рабочего процесса падает. 
 Наша команда предлагает решение этих проблем с минимальными потерями  времени.
 Наша система owl eye способна анализровать эффективность труда каждого сотрудника фирмы и в случае возникновения проблем, 
-система предложит все возможные варианты решения. Так же наша система делает работу менеджра куда проще, 
+система предложит все возможные варианты решения. Так же наша система делает работу менеджра значительно проще, 
 теперь ему нужно лишь выбрать одно из решений, которые предоставит ему наша система.
