Update 2. Новизна и практическая значимость.md

--- a/2. Новизна и практическая значимость.md
+++ b/2. Новизна и практическая значимость.md
@@ -1,4 +1,4 @@
-2. Актуальность.
+# 2. Новизна и практическая значимость
   Сегодня очень важно, чтобы каждый работник выполнял свою задачу максимально быстро и эффективно, и вслучае возникновения каких-либо проблем, ему должна быть предоставлена помощь, менеджеры не могут успевать помогать выявлять решать проблемы слабой эффективности 
 у нескольких сотрудников сразу, в результате чего эффективнось всего рабочего процесса падает. 
 Наша команда предлагает решение этих проблем с минимальными потерями  времени.
