Update 6. Аудитория проекта и ее потребности.md

--- a/6. Аудитория проекта и ее потребности.md
+++ b/6. Аудитория проекта и ее потребности.md
@@ -1,7 +1,7 @@
 # 6. Аудитория проекта и ее потребности
 ## Аудитория проекта
-* На старте проекта основной целевой аудиторией будут являться российские офисные компании, в дальнейшем к числу компаний примкнут и зарубежные. 
+* На старте проекта основной целевой аудиторией будут являться российские офисные компании, в дальнейшем к числу компаний примкнут и зарубежные.  
 * Планируется расширить возможности нашего проекта, тем самым приспособив его к фирмам занимающимися обработкой и производством.  
-## Потребности проекта
-* Раз в пол года проверка техобслуживанием.
-* Техническое оборудование 
+## Потребности аудитории
+* Компаниям нужна ситема способная улучшить производительность труда, при этом не жертвуя условиями для сотрудников этой компании.
+* Система должна быть надежной и безотказной.
