Update 2. Новизна и практическая значимость.md

--- a/2. Новизна и практическая значимость.md
+++ b/2. Новизна и практическая значимость.md
@@ -4,4 +4,4 @@
 Наша команда предлагает решение этих проблем с минимальными потерями  времени.
 Наша система owl eye способна анализровать эффективность труда каждого сотрудника фирмы и в случае возникновения проблем, 
 система предложит все возможные варианты решения. Так же наша система делает работу менеджра значительно проще, 
-теперь ему нужно лишь выбрать одно из решений, которые предоставит ему наша система.
+теперь ему нужно лишь выбрать одно из решений, которые предоставит ему наша система. В нашей системе будут применены методы машинного обучения для распознования изображений и ИИ, который будет предлогать возможные решения для любой ситуации.
