--- a/5. Бизнес-план.md
+++ b/5. Бизнес-план.md
@@ -3,3 +3,6 @@
 2. **Потоки доходов:** основной доход нам будут приносить компании заинтересованные в нашей системе, они будут заказывать наши услуги.
 3. **Расширение:** в дальнейшем мы планируем расширить нашу клиентскую базу, путём добавления новых языков и выхода на международный уровень.
 4. **Структура расходов:** стартовый капитал будет составлять 250 тыс.руб., на эти деньги будет проведена закупка оборудования и маркетинговая компания 
+5. **Решение проблем:** система способна анализровать эффективность труда каждого сотрудника фирмы и в случае возникновения проблем, 
+система предложит возможные варианты решения. Так же наша система делает работу менеджра куда проще, 
+теперь ему нужно лишь применять те решения, которые предлагает ему система.
